update pom adn recogniser